src/main/kotlin/com/example/error/OutOfIndexError.kt
package com.example.error

class OutOfIndexError: Error("index is out of Range")